tests/sawn/fixtures/invalid/36_table_no_space_before_columns.sawn
// §3.5: Separator between [][] and first column MUST be exactly one space
data[][]name,age
  "Alice",30
